# openfrust

./: .gitignore  Cargo.toml  index.html  mise.toml
.cargo/: config.toml
assets/shaders/: border.wgsl  border_adjacency.wgsl  clear_buffers.wgsl  copy_board.wgsl  copy_to_texture.wgsl  expansion.wgsl  get_player_id.wgsl  process_results.wgsl  seed.wgsl  simplex.wgsl
docs/: render-pipeline.md
src/: main.rs  shaders.rs  sim_manager.rs  types.rs  utils.rs
src/map/: loader.rs  loader_fs.rs  loader_http.rs  mod.rs
src/shaders/: border_material.rs  frame_manager.rs  mod.rs
src/shaders/compute/: cursor_worker.rs  expansion_worker.rs  mod.rs
src/systems/: border_calculation.rs  border_material.rs  cursor_query.rs  disconnected_fronts.rs  expansion_assignment.rs  expansion_processing.rs  fixed_update_timer.rs  game_update.rs  gpu_orchestrator.rs  input.rs  map_renderer.rs  mod.rs  perf_ui.rs  player_elimination.rs  player_info.rs  player_info_panel.rs  rendering.rs  setup.rs  sim_manager.rs  tilemap_rendering.rs
src/systems/ai/: expansions.rs  mod.rs
src/systems/gpu/: frame_manager.rs  mod.rs  seeder.rs  sync.rs  worker.rs
src/systems/plugins/: mod.rs  player_info_panel.rs
