[package]
name = "openfrust"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true

[dependencies]
bevy = { version = "0.17.2", features = ["trace", "trace_tracy", "wayland"] }
bitfield = "0.19.2"
itertools = "0.14.0"
rand = "0.9.2"
tracing = "0.1.41"
