[package]
name = "openfrust"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true

[dependencies]
bevy = { version = "0.17.2", features = ["trace", "trace_tracy", "wayland"] }
bevy_ecs_tilemap = "0.17.0-rc.1"
bevy_pancam = "0.19.0"
bitfield = "0.19.2"
itertools = "0.14.0"
iyes_perf_ui = {version = "0.5.0", git = "https://github.com/mgi388/iyes_perf_ui", branch = "bevy-0.17"}
rand = "0.9.2"
tracing = "0.1.41"
