[package]
name = "openfrust"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true

[features]
default = ["trace_tracy"]
trace_tracy = ["bevy/trace_tracy", "bevy_app_compute/trace_tracy"]
wasm = [ "bevy/webgpu"]

[dependencies]
bevy = { version = "0.17.2", features = ["trace", "wayland"] }
# bevy_app_compute = {version = "0.17.0", git = "https://github.com/jwright159/bevy_app_compute", branch = "bevy-0.17"}
bevy_app_compute = {version = "0.17.0", path = "../bevy_app_compute"}
bevy_pancam = "0.19.0"
bitfield = "0.19.2"
bytemuck = { version = "1.24.0", features = ["derive"] }
getrandom = "0.3.2"
itertools = "0.14.0"
iyes_perf_ui = {version = "0.5.0", git = "https://github.com/mgi388/iyes_perf_ui", branch = "bevy-0.17"}
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
test-case = "3.3.1"
tracing = "0.1"
ureq = "2.10"
